#Feature: Response check, RCP games

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,20 @@
 /gugudan/gugudan.iml
 /gugudan/package-lock.json
 /gugudan/dist
+
+/bulls-and-cows/node_modules/
+/bulls-and-cows/bulls-and-cows.iml
+/bulls-and-cows/package-lock.json
+/bulls-and-cows/dist
+
+/response-check/node_modules/
+/response-check/response-check.iml
+/response-check/package-lock.json
+/response-check/dist
+
+/RCP/node_modules/
+/RCP/RCP.iml
+/RCP/package-lock.json
+/RCP/dist
+
 .idea
