--- a/bulls-and-cows/package.json
+++ b/bulls-and-cows/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "gugudan",
+  "name": "bulls-and-cows",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack"
+    "dev": "webpack serve --env development"
   },
   "author": "Henry",
   "license": "MIT",
@@ -19,6 +19,7 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
